OSP-Core: Fixed an Issue when OSP will attempt to keep adding the default Topic "Other", even after deletion - #407
OSP-Core: Fixed an issue where Webhook tests would fail if no Video Recording Existed on a server - #442
OSP-Core: Updates Pillow to 8.3.2 to fix CVE-2021-34552
OSP-Core: Added Message Moderation / Deleting of Chat Messages
OSP-Core: Adds User to User Messaging/Mail
OSP-Core: Removes APScheduler Assignment
OSP-Core: Added Channel Invites API Endpoint for getting/adding/removing user invites to a channel
OSP-Core: New Security UI for Login, Registration, Password Reset, TOTP Configuration
OSP-Core: Corrects a security issue where video metadata could be edited by a non-owning user
OSP-Core: Corrects an issue where TOTP + "Remember Me" Setting on Login would result in a 500 error
OSP-Core: Fix for editing a channel which contains a shortcode that causes the short code to be cleared due to a invalid check
OSP-Core: Fix for RTMP/Edge handling when Adaptive Streams are Enabled - #459
OSP-Core: Adds Server Admin Access to View Protected Channels
OSP-Core: Theater Mode Added to Streams, Videos, & Clips
OSP-Core: API Endpoints to Add/Remove RTMP Servers Added to apiv1/server/rtmp
OSP-Core: Adds Option for Admin to Restrict Total Number of User Owned Channels - #294
OSP-Core: Disables Email Subscriptions from Being Sent When Maintenance Mode is Enabled - #444
OSP-Core: Adds Option to Set a Channel as Private
OSP-Core: Created new Endpoint - /apiv1/channels/<channelUUID>/streams
OSP-Core: Optimized Video JS Monitor Function to Use New Stream API Endpoint and Reduce Load
OSP-Core: Added Social Network Links for User Bios - #357
OSP-Core: Added Checks for Channel Protection to a Channel's List View Page
OSP-Core: Adds ability for admins to edit video and clip metadata and thumbnails #243
OSP-Core: Adds user settings for e-mail notifications for streams, new videos and messages #261
OSP-Core: Adds channel option to toggle part/join messages #384