@@ -99,6 +99,33 @@
         {% endif %}
     </script>
 
+    <script>
+        function togglePlayPause() {
+            if (player.paused()) {
+                player.play();
+            } else {
+                player.pause();
+            }
+        }
+        
+        document.addEventListener("keydown", (e) => {
+            if (e.keyCode == 37) {          // left arrow
+                player.currentTime(player.currentTime() - 5);
+            } else if (e.keyCode == 39) {   // right arrow
+                player.currentTime(player.currentTime() + 5);
+            } else if (e.keyCode == 32) {   // space bar
+                e.preventDefault();
+                togglePlayPause();
+            } else if (e.keyCode == 38) {   // up arrow
+                e.preventDefault();
+                player.volume(player.volume() + 0.1)
+            } else if (e.keyCode == 40) {   // down arrow
+                e.preventDefault();
+                player.volume(player.volume() - 0.1)
+            }
+        })
+    </script>
+
     {% if startTime != None %}
     <script>
         player.currentTime({{ startTime }});
