@@ -18,6 +18,7 @@ OSP-Core: Fixed an Issue when OSP will attempt to keep adding the default Topic 
 OSP-Core: Fixed an issue where Webhook tests would fail if no Video Recording Existed on a server - #442
 OSP-Core: Updates Pillow to 8.3.2 to fix CVE-2021-34552
 OSP-Core: Added Message Moderation / Deleting of Chat Messages
+OSP-Core: Added well known keyboard shortcuts for videoJS player to play/pause, seek and adjust volume
 OSP-Core: Adds User to User Messaging/Mail
 OSP-Core: Removes APScheduler Assignment
 OSP-Core: Added Channel Invites API Endpoint for getting/adding/removing user invites to a channel
